--- a/thank_you.html
+++ b/thank_you.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -12,7 +10,7 @@
    <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="/" aria-label="Mindscape - главная страница"> 
      <svg class="d-inline-block align-text-top" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-      <rect width="32" height="32" rx="8" fill="#E07856" /> <path d="M8 16h16M12 12h8m-4 8h4" stroke="white" stroke-width="2" stroke-linecap="round" />
+      <rect width="32" height="32" rx="8" fill="#E07856"></rect> <path d="M8 16h16M12 12h8m-4 8h4" stroke="white" stroke-width="2" stroke-linecap="round"></path>
      </svg> 
      <span class="ms-2">Mindscape</span> 
     </a>
@@ -40,7 +38,7 @@
    <section class="py-4 py-md-5 bg-light" data-aos="fade-up">
     <div class="container text-center">
      <div class="ratio ratio-16x9 mb-4" style="max-width:800px;margin:auto;">
-      <img src="https://images.unsplash.com/photo-1597764690523-15bea4c581c9?w=800&amp;h=450&amp;fit=crop" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
+      <img src="img/16940194.jpg" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
      </div>
      <h2 class="display-6 fw-bold mb-3">We staan klaar om uw auto in topconditie te houden</h2>
      <p class="lead text-muted mb-4">Onze experts nemen spoedig contact met u op voor de bevestiging van uw afspraak.</p>
@@ -97,6 +95,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
